Misc cleanups (#317)
* Replace `String.format` w/ `String.formatted`

* Simplify LogAccessor usage

* Replace `new LogAccessor(LogFactory.getLog(Class))`
  calls w/ `new LogAccessor(Class)`

* Remove fully qualified refs in javadoc + code